--- a/First_project/View/pom.xml
+++ b/First_project/View/pom.xml
@@ -29,6 +29,7 @@
             <artifactId>javafx-fxml</artifactId>
             <version>19-ea+7</version>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -45,6 +46,7 @@
             <groupId>org.sudoku</groupId>
             <artifactId>ModelProject</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
