--- a/First_project/View/src/main/resources/com/sudoku/view/StartMenu.fxml
+++ b/First_project/View/src/main/resources/com/sudoku/view/StartMenu.fxml
@@ -10,7 +10,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Choose the difficult of the game:" />
+   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Choose the difficulty of the game:" />
 
     <Label fx:id="welcomeText" />
     <Button onAction="#onEasyButtonClick" prefHeight="25.0" prefWidth="64.0" text="Easy" />
