--- a/First_project/View/src/main/resources/com/sudoku/view/StartMenu.fxml
+++ b/First_project/View/src/main/resources/com/sudoku/view/StartMenu.fxml
@@ -3,17 +3,24 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="205.0" prefWidth="250.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.sudoku.view.StartMenuController">
+<VBox alignment="CENTER" prefHeight="205.0" prefWidth="250.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sudoku.view.StartMenuController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Choose the difficulty of the game:" />
+   <AnchorPane>
+      <children>
+         <Button alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="139.0" layoutY="2.0" mnemonicParsing="false" onAction="#Polish" prefHeight="25.0" prefWidth="77.0" text="%Polski" textAlignment="CENTER" />
+         <Button alignment="TOP_CENTER" contentDisplay="RIGHT" layoutX="5.0" layoutY="2.0" mnemonicParsing="false" onAction="#Russian" prefHeight="25.0" prefWidth="77.0" text="%Rosyjski" textAlignment="RIGHT" />
+      </children>
+   </AnchorPane>
+   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%chooseDiff" />
 
     <Label fx:id="welcomeText" />
-    <Button onAction="#onEasyButtonClick" prefHeight="25.0" prefWidth="64.0" text="Easy" />
-    <Button onAction="#onMediumButtonClick" prefHeight="25.0" prefWidth="64.0" text="Medium" />
-    <Button onAction="#onHardButtonClick" prefHeight="25.0" prefWidth="64.0" text="Hard" />
+    <Button onAction="#onEasyButtonClick" prefHeight="25.0" prefWidth="93.0" text="%Easy" />
+    <Button onAction="#onMediumButtonClick" prefHeight="25.0" prefWidth="91.0" text="%Medium" />
+    <Button onAction="#onHardButtonClick" prefHeight="25.0" prefWidth="93.0" text="%Hard" />
 </VBox>
