--- a/First_project/View/src/main/resources/com/sudoku/view/GameMenu.fxml
+++ b/First_project/View/src/main/resources/com/sudoku/view/GameMenu.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="412.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sudoku.view.GameMenuController">
+<VBox prefHeight="412.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sudoku.view.GameMenuController">
   <children>
     <AnchorPane prefHeight="409.0" prefWidth="470.0" VBox.vgrow="ALWAYS">
          <children>
@@ -50,12 +45,17 @@
           <items>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="69.0" prefWidth="278.0">
                   <children>
-                      <Button fx:id="buttonCheck" layoutX="14.0" layoutY="6.0" mnemonicParsing="false" onAction="#ButtonCheck" prefHeight="48.0" prefWidth="158.0" text="%buttonCheck">
+                      <Button fx:id="buttonCheck" layoutX="14.0" layoutY="6.0" mnemonicParsing="false" onAction="#ButtonCheck" prefHeight="48.0" prefWidth="131.0" text="%buttonCheck">
                           <font>
                               <Font size="16.0" />
                           </font>
                       </Button>
-                  <Button layoutX="296.0" layoutY="6.0" mnemonicParsing="false" onAction="#ButtonToFile" prefHeight="48.0" prefWidth="158.0" text="%buttonFile">
+                  <Button layoutX="337.0" layoutY="6.0" mnemonicParsing="false" onAction="#ButtonToFile" prefHeight="48.0" prefWidth="131.0" text="%buttonFile">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="buttonRead" layoutX="169.0" layoutY="6.0" mnemonicParsing="false" onAction="#ButtonRead" prefHeight="48.0" prefWidth="131.0" text="%buttonRead">
                      <font>
                         <Font size="16.0" />
                      </font>
