--- a/First_project/View/pom.xml
+++ b/First_project/View/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.5 </version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.40.0.0</version>
+        </dependency>
 
     </dependencies>
 
